Closed Bug 492826 Opened 16 years ago Closed 16 years ago

shell selftest mmgc,basics,gcheap is failing

Categories

(Tamarin Graveyard :: Virtual Machine, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: dschaffe, Assigned: dschaffe)

References

Details

Attachments

(1 file)

the test is failing: ['failure', 'mmgc', 'basics', 'gcheap', '(int)gh->GetTotalHeapSize()==128', 'e:/buildbot/tamarin-redux/windows/tamarin-redux/shell/../extensions/ST_mmgc_basics.cpp', 196] buildbot is not detecting the failure. should parse 'failure' as a fail. both issues should be addressed.
Flags: flashplayer-triage+
Attached patch patchSplinter Review
the run-selftest.sh change outputs 'failures:' instead of 'fails:' so buildbot should detect failures. other change modifies the failing test. passes locally. submitted a sandbox build.
Assignee: nobody → dschaffe
Status: NEW → ASSIGNED
Attachment #377259 - Flags: review?(brbaker)
Attachment #377259 - Flags: review?(brbaker) → review+
pushed in 1890:b8507a18d246
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
closing bug by marking verified/fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: