bug 492826: shell selftest fix mmgc/gcheap test,buildbot reports failures correctly  r+brbaker

fixed gcheap test to confirm allocation increases heap usage more generally
fix typo in buildbot script reports failures instead of fails, buildbot will detect failure